gcc/testsuite/gcc.dg/switch-A.c
/* { dg-do compile } */

void foo()
{
  switch (,) { } /* { dg-error "expected expression before" } */
}

